# preload-ng

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  GUIDE.md  README.md  devbox.json  lefthook.yml
.github/workflows/: ci.yml  docs.yml
.sqlx/: query-039686408418e9f87c6272e9bd232d5837530daff6b07333382e807f736d4130.json  query-0a633d00ad54e21a5a540421563600ce231df7cf2d80492704fe602b189e7b52.json  query-29f0aaa17e86230df0aa68562a01426b39524130bd7a0c2378e72f0a6eead60e.json  query-2dfb1d916f9f822fbd87e0f195adf32f40eb8470990d81f0ec4b37f78a721dd0.json  query-497eec23eee4144a8d85a00d534603a030ff88e10b1847aff58898e9dcec2c6c.json  query-676def96df6d6ccd1a9259d3bd317c202b2dd9c9c8fc8037fee76ad2bae3c453.json  query-6c8576a05b8c19eab262367a97fae7961ecd72ff9b5dd477b9f5fe62d6a1706b.json  query-6d7a0111bede6c6a67be12d14c1a8041c4da3175850a4b30f9afc7073ab07d66.json  query-7696530be288047c4c84d6c7b1708532753df5d03a5c295f91138658ab537434.json  query-8295d754c5a53f32dea83c01d1d9c4c97fbd3bfb28f18eb847a116cc249041f8.json  query-8eff619773b0af2aaefc32571181f0771b6a7083fa2ded832ce0cb20056aecaf.json  query-a4ed7e8d602c178d34fb7a01ea67a66259a0889536d487e94dce8669c7c027cb.json  query-ae6948e5ed3d9abcaea6056cf5693d3a3950d5fe14eb75ac0761b290e1e86d25.json  query-bc258032f2419e7b594df12fb107efa31dfccd69ccc173bc222e25fe80e9ff82.json  query-dd39e3ac4c6238df0b34059ec61545d93da99c2e56839bafe02808137f2d7780.json  query-ffe17c6b8c64f7cd54611bf92d6f588b4172317b63593aec3d4a12897e3b1474.json
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  priority.rs
crates/cli/tests/: signals.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  memory_policy.rs  model.rs  sort_strategy.rs  system.rs
crates/db/: Cargo.toml
crates/kernel/: Cargo.toml
crates/kernel/migrations/: 20241008140047_init.sql
crates/kernel/proptest-regressions/: database.txt
crates/kernel/src/: database.rs  error.rs  lib.rs  state.rs  utils.rs
crates/kernel/src/exe/: database.rs  inner.rs  mod.rs
crates/kernel/src/exemap/: database.rs  mod.rs
crates/kernel/src/map/: database.rs  inner.rs  mod.rs
crates/kernel/src/markov/: database.rs  inner.rs  markov_state.rs  mod.rs
crates/kernel/src/state/: database.rs  inner.rs  mod.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/proptest-regressions/prediction/: predictor.txt
crates/orchestrator/src/: engine.rs  lib.rs  math.rs
crates/orchestrator/src/domain/: ids.rs  map_segment.rs  markov.rs  memstat.rs  mod.rs
crates/orchestrator/src/observation/: admission.rs  event.rs  fanotify_watcher.rs  mod.rs  model_updater.rs  procfs_scanner.rs
crates/orchestrator/src/persistence/: repo.rs
crates/orchestrator/src/prediction/: predictor.rs  types.rs
crates/orchestrator/src/prefetch/: mod.rs  planner.rs  prefetcher.rs
crates/orchestrator/src/stores/: active_set.rs  exe_map_index.rs  exe_store.rs  map_store.rs  markov_graph.rs  mod.rs
crates/orchestrator/tests/: engine_pipeline.rs  model_updater.rs  predictor.rs  prefetch_planner.rs  prefetcher_integration.rs  procfs_integration.rs
docs/: ADR.md  config.example.toml
