[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2.0.12"
tracing = "0.1.41"
proptest = "1.6.0"
flume = "0.11.1"
tokio = { version = "1.43.0", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
# https://smallcultfollowing.com/babysteps/blog/2024/05/02/unwind-considered-harmful/
panic = "abort"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[workspace.lints.clippy]
print_stderr = "warn"
print_stdout = "warn"
