[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/config",
    "crates/orchestrator",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
proptest = "1.9.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.18"
async-trait = "0.1.89"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
toml_edit = { version = "0.24.0", features = ["serde"] }
slotmap = "1.1.1"
procfs = "0.18.0"
nix = { version = "0.31.1", features = ["fs", "process", "signal"] }
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
rkyv = { version = "0.8.14", features = ["bytecheck"] }
moka = { version = "0.12.8", features = ["sync"] }
clap = { version = "4.5.56", features = ["derive"] }
tempfile = "3.24.0"
libc = "0.2.180"

[profile.release]
lto = true
codegen-units = 1
strip = true
# https://smallcultfollowing.com/babysteps/blog/2024/05/02/unwind-considered-harmful/
panic = "abort"

[profile.test.package.proptest]
opt-level = 3

[workspace.lints.clippy]
print_stderr = "warn"
print_stdout = "warn"
