[package]
name = "preload-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# inter-crate
config = { version = "0.1.0", path = "../config" }
kernel = { version = "0.1.0", path = "../kernel" }
# workspace dependencies
thiserror.workspace = true
tracing.workspace = true
flume.workspace = true
tokio.workspace = true
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.26", features = ["wrap_help"] }
clap-verbosity-flag = "3.0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
glob = "0.3.2"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
