[package]
name = "cli"
version = "0.3.1"
edition = "2024"
license.workspace = true

[dependencies]
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
config = { path = "../config" }
orchestrator = { path = "../orchestrator" }
anyhow = "1.0.100"
libc.workspace = true

[dev-dependencies]
proptest.workspace = true
nix.workspace = true
tempfile.workspace = true
