[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { version = "0.10.19", features = ["toml"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_with = "3.11.0"
thiserror.workspace = true
toml_edit = { version = "0.22.22", features = ["serde"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.13.0"
