[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bincode = "1.3.3"
bitflags = "2.6.0"
config = { version = "0.1.0", path = "../config" }
educe = { version = "0.6.0", default-features = false, features = ["Debug", "Eq", "Hash", "Ord", "PartialEq", "PartialOrd"] }
humansize = "2.1.3"
itertools = "0.13.0"
libc = "0.2.161"
nix = { version = "0.29.0", features = ["fs"] }
parking_lot = "0.12.3"
procfs = "0.17.0"
rayon = "1.10.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
sysinfo = "0.32.0"
thiserror.workspace = true
tokio = { version = "1.40.0", features = ["sync", "time"] }
tracing.workspace = true

[dev-dependencies]
futures = { version = "0.3.31", default-features = false }
pretty_assertions = "1.4.1"
proptest.workspace = true
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["macros", "test-util"] }
tokio-test = "0.4.4"

[features]
default = []
fiemap = []

[lints]
workspace = true
