[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.84"
bincode = "1.3.3"
bitflags = "2.6.0"
config = { version = "0.1.0", path = "../config" }
educe = { version = "0.6.0", default-features = false, features = ["Debug", "Eq", "Hash", "Ord", "PartialEq", "PartialOrd"] }
humansize = "2.1.3"
itertools = "0.14.0"
libc = "0.2.169"
nix = { version = "0.29.0", features = ["fs"] }
parking_lot = "0.12.3"
procfs = "0.17.0"
rayon = "1.10.0"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
sysinfo = "0.33.1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
futures = { version = "0.3.31", default-features = false }
pretty_assertions = "1.4.1"
proptest.workspace = true
tempfile = "3.15.0"
tokio = { workspace = true, features = ["macros", "test-util"] }
tokio-test = "0.4.4"

[features]
default = []
fiemap = []

[lints]
workspace = true
