[package]
name = "orchestrator"
version = "0.3.1"
edition = "2024"
license.workspace = true

[dependencies]
config = { path = "../config" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true
slotmap.workspace = true
procfs.workspace = true
nix.workspace = true
sqlx.workspace = true
rkyv.workspace = true
libc.workspace = true
serde.workspace = true
moka.workspace = true
rustc-hash.workspace = true
half.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
